fix: run test command

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,7 +53,7 @@ jobs:
         uses: ./.github/actions/setup
 
       - name: 🧪 Run tests
-        run: npm run test:run
+        run: npm run test
 
   # Stage 4: Build
   build:
