--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,25 +1,71 @@
 version: '3.8'
 
 services:
+  # PostgreSQL Database
   postgres:
     image: postgres:15-alpine
-    container_name: f1-champions-db
+    container_name: f1-postgres
     restart: unless-stopped
-    env_file:
-      - .env.local
     environment:
-      POSTGRES_DB: f1-champions
-      POSTGRES_USER: f1user
-      POSTGRES_PASSWORD: f1password
+      POSTGRES_DB: f1_champions
+      POSTGRES_USER: f1_user
+      POSTGRES_PASSWORD: f1_password
+      POSTGRES_INITDB_ARGS: '--encoding=UTF-8'
     ports:
-      - '5431:5432'
+      - '5432:5432'
     volumes:
       - postgres_data:/var/lib/postgresql/data
-    # healthcheck:
-    #   test: ['CMD-SHELL', 'pg_isready -U f1user -d f1-champions']
-    #   interval: 10s
-    #   timeout: 5s
-    #   retries: 5
+    healthcheck:
+      test: ['CMD-SHELL', 'pg_isready -U f1_user -d f1_champions']
+      interval: 10s
+      timeout: 5s
+      retries: 5
+    networks:
+      - f1-network
 
+  # F1 World Champions API
+  f1-api:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: f1-api
+    restart: unless-stopped
+    depends_on:
+      postgres:
+        condition: service_healthy
+    environment:
+      # Database Configuration
+      DB_HOST: postgres
+      DB_PORT: 5431
+      DB_USER: f1_user
+      DB_PASSWORD: f1_password
+      DB_NAME: f1_champions
+
+      # Application Configuration
+      NODE_ENV: production
+      PORT: 3000
+    ports:
+      - '3000:3000'
+    volumes:
+      # Mount source code for development (optional)
+      - .:/app
+      - /app/node_modules
+    networks:
+      - f1-network
+    command: >
+      sh -c "
+        echo '🏁 Waiting for database to be ready...' &&
+        sleep 10 &&
+        echo '🚀 Starting F1 Champions API...' &&
+        npm run start:prod
+      "
+
+# Networks
+networks:
+  f1-network:
+    driver: bridge
+
+# Volumes
 volumes:
   postgres_data:
+    driver: local
