feat: build using docker

--- a/.github/actions/pipeline-summary/action.yml
+++ b/.github/actions/pipeline-summary/action.yml
@@ -17,6 +17,10 @@ inputs:
   build-result:
     description: 'Result of build job'
     required: true
+  docker-result:
+    description: 'Result of docker job'
+    required: false
+    default: 'skipped'
   github-event-name:
     description: 'GitHub event name'
     required: true
@@ -73,15 +77,37 @@ runs:
         echo "|  Testing | ${{ inputs.test-result == 'success' && '✅ Success' || '❌ Failed' }} |" >> $GITHUB_STEP_SUMMARY
         echo "|  Security| ${{ inputs.security-result == 'success' && '✅ Success' || '❌ Failed' }} |" >> $GITHUB_STEP_SUMMARY
         echo "|  Build | ${{ inputs.build-result == 'success' && '✅ Success' || '❌ Failed' }} |" >> $GITHUB_STEP_SUMMARY
+
+        # Add Docker row only if it ran
+        if [[ "${{ inputs.docker-result }}" != "skipped" ]]; then
+          echo "|  Docker Publish | ${{ inputs.docker-result == 'success' && '✅ Success' || '❌ Failed' }} |" >> $GITHUB_STEP_SUMMARY
+        fi
         echo "" >> $GITHUB_STEP_SUMMARY
 
         echo "###  Overall Status" >> $GITHUB_STEP_SUMMARY
         echo "" >> $GITHUB_STEP_SUMMARY
-        if [[ "${{ inputs.install-dependencies-result }}" == "success" && "${{ inputs.linting-result }}" == "success" && "${{ inputs.test-result }}" == "success" && "${{ inputs.security-result }}" == "success" && "${{ inputs.build-result }}" == "success" ]]; then
+
+        # Check if core stages passed (Docker is optional)
+        CORE_SUCCESS=true
+        if [[ "${{ inputs.install-dependencies-result }}" != "success" || "${{ inputs.linting-result }}" != "success" || "${{ inputs.test-result }}" != "success" || "${{ inputs.security-result }}" != "success" || "${{ inputs.build-result }}" != "success" ]]; then
+          CORE_SUCCESS=false
+        fi
+
+        if [[ "$CORE_SUCCESS" == "true" ]]; then
           if [[ "${{ inputs.github-event-name }}" == "pull_request" ]]; then
             echo "All checks passed! PR is ready for merge into ${{ inputs.github-base-ref }}" >> $GITHUB_STEP_SUMMARY
           else
             echo "Branch ${{ inputs.github-ref-name }} is healthy ✅" >> $GITHUB_STEP_SUMMARY
+            
+            # Add Docker status for post-merge
+            if [[ "${{ inputs.docker-result }}" == "success" ]]; then
+              echo "" >> $GITHUB_STEP_SUMMARY
+              echo "🐳 **Docker Image Published Successfully**" >> $GITHUB_STEP_SUMMARY
+              echo "Pull the latest image: \`docker pull your-username/f1-world-champions-api:${{ inputs.github-ref-name }}\`" >> $GITHUB_STEP_SUMMARY
+            elif [[ "${{ inputs.docker-result }}" == "failure" ]]; then
+              echo "" >> $GITHUB_STEP_SUMMARY
+              echo "⚠️ **Docker Publish Failed** - Check logs for details" >> $GITHUB_STEP_SUMMARY
+            fi
           fi
         else
           if [[ "${{ inputs.github-event-name }}" == "pull_request" ]]; then
