--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "migration:create": "typeorm-ts-node-commonjs migration:create -d ./src/database/typeOrm.config.ts",
     "migration:run": "typeorm-ts-node-commonjs migration:run -d ./src/database/typeOrm.config.ts",
     "migration:revert": "typeorm-ts-node-commonjs migration:revert -d ./src/database/typeOrm.config.ts",
-    "migration:show": "typeorm-ts-node-commonjs migration:show -d ./src/database/typeOrm.config.ts"
+    "migration:show": "typeorm-ts-node-commonjs migration:show -d ./src/database/typeOrm.config.ts",
+    "types:generate": "openapi-typescript http://localhost:3000/api-docs-json --output ./src/types/f1-api.ts"
   },
   "dependencies": {
     "@nestjs/axios": "^4.0.0",
@@ -66,6 +67,7 @@
     "globals": "^16.0.0",
     "husky": "^9.1.7",
     "jest": "^29.7.0",
+    "openapi-typescript": "^7.8.0",
     "prettier": "^3.4.2",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
