--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "migration:create": "typeorm-ts-node-commonjs migration:create -d ./src/database/typeOrm.config.ts",
     "migration:run": "typeorm-ts-node-commonjs migration:run -d ./src/database/typeOrm.config.ts",
     "migration:revert": "typeorm-ts-node-commonjs migration:revert -d ./src/database/typeOrm.config.ts",
-    "migration:show": "typeorm-ts-node-commonjs migration:show -d ./src/database/typeOrm.config.ts"
+    "migration:show": "typeorm-ts-node-commonjs migration:show -d ./src/database/typeOrm.config.ts",
+    "types:generate": "openapi-typescript http://localhost:3000/api-docs-json --output ./src/types/f1-api.ts"
   },
   "dependencies": {
     "@nestjs/axios": "^4.0.0",
@@ -33,6 +34,7 @@
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/swagger": "^11.2.0",
     "@nestjs/typeorm": "^11.0.0",
     "axios": "^1.9.0",
     "class-transformer": "^0.5.1",
@@ -41,6 +43,7 @@
     "pg": "^8.16.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
+    "swagger-ui-express": "^5.0.1",
     "typeorm": "^0.3.24"
   },
   "devDependencies": {
@@ -64,6 +67,7 @@
     "globals": "^16.0.0",
     "husky": "^9.1.7",
     "jest": "^29.7.0",
+    "openapi-typescript": "^7.8.0",
     "prettier": "^3.4.2",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
