--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,6 +33,12 @@ jobs:
         uses: actions/checkout@v4
       - name: Setup
         uses: ./.github/actions/setup-node-dependencies
+      - name: Upload node_modules artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: node-modules-${{ github.run_id }}
+          path: node_modules
+          retention-days: 1
 
   # Stage 2: Linting
   linting:
@@ -44,10 +50,16 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Setup
-        uses: ./.github/actions/setup-node-dependencies
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
         with:
-          create-env: 'false'
+          node-version: '20.x'
+
+      - name: Download node_modules artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: node-modules-${{ github.run_id }}
+          path: node_modules
 
       - name: Run ESLint
         run: npm run lint
@@ -65,10 +77,16 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Setup
-        uses: ./.github/actions/setup-node-dependencies
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
         with:
-          create-env: 'false'
+          node-version: '20.x'
+
+      - name: Download node_modules artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: node-modules-${{ github.run_id }}
+          path: node_modules
 
       - name: Run tests
         run: npm run test:cov
@@ -89,10 +107,16 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Setup
-        uses: ./.github/actions/setup-node-dependencies
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
         with:
-          create-env: 'false'
+          node-version: '20.x'
+
+      - name: Download node_modules artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: node-modules-${{ github.run_id }}
+          path: node_modules
 
       - name: Initialize CodeQL
         uses: github/codeql-action/init@v3
