--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,33 +20,47 @@ env:
   DB_NAME: ${{ secrets.DB_NAME }}
   # Application Configuration
   APP_PORT: ${{ secrets.PORT }}
+  NODE_ENV: production
 
-  NODE_ENV: ${{ vars.NODE_ENV }}
 jobs:
   # Stage 1: Install Dependencies
   install-dependencies:
     name: Install Dependencies
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-      - name: Setup Environment
-        id: setup
-        uses: ./.github/actions/setup-environment
-      - name: Install Dependencies
-        if: steps.setup.outputs.cache-hit != 'true'
-        run: npm ci
+      - name: Setup
+        uses: ./.github/actions/setup-node-dependencies
+      - name: Upload node_modules artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: node-modules-${{ github.run_id }}
+          path: node_modules
+          retention-days: 1
 
   # Stage 2: Linting
   linting:
     name: Linting
     runs-on: ubuntu-latest
     needs: install-dependencies
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-      - name: Setup Environment
-        uses: ./.github/actions/setup-environment
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20.x'
+
+      - name: Download node_modules artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: node-modules-${{ github.run_id }}
+          path: node_modules
+
       - name: Run ESLint
         run: npm run lint
 
@@ -54,15 +68,26 @@ jobs:
   test:
     name: Tests
     runs-on: ubuntu-latest
-    needs: install-dependencies
     permissions:
       pull-requests: write
       checks: write
+    needs: install-dependencies
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-      - name: Setup Environment
-        uses: ./.github/actions/setup-environment
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20.x'
+
+      - name: Download node_modules artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: node-modules-${{ github.run_id }}
+          path: node_modules
+
       - name: Run tests
         run: npm run test:cov
 
@@ -70,29 +95,41 @@ jobs:
   security:
     name: Security
     runs-on: ubuntu-latest
-    needs: [linting, test]
+    needs: [install-dependencies, linting, test]
     permissions:
       security-events: write
       actions: read
       contents: read
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
-      - name: Setup Environment
-        uses: ./.github/actions/setup-environment
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20.x'
+
+      - name: Download node_modules artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: node-modules-${{ github.run_id }}
+          path: node_modules
+
       - name: Initialize CodeQL
         uses: github/codeql-action/init@v3
         with:
           languages: javascript-typescript
           queries: security-extended,security-and-quality
+
       - name: Perform CodeQL Analysis
         uses: github/codeql-action/analyze@v3
         with:
           category: '/language:javascript-typescript'
           upload: true
+
       - name: Check Dependencies Security
         run: |
           echo "Checking dependencies for security vulnerabilities..."
@@ -108,36 +145,35 @@ jobs:
   docker-build:
     name: Build
     runs-on: ubuntu-latest
-    needs: [linting, test, security]
+    needs: [install-dependencies, linting, test, security]
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-      - name: Setup Environment
-        uses: ./.github/actions/setup-environment
-      - name: Generate .env file
-        run: |
-          echo "DB_HOST=${{ env.DB_HOST }}" > .env
-          echo "DB_PORT=${{ env.DB_PORT }}" >> .env
-          echo "DB_USER=${{ env.DB_USER }}" >> .env
-          echo "DB_PASSWORD=${{ env.DB_PASSWORD }}" >> .env
-          echo "DB_NAME=${{ env.DB_NAME }}" >> .env
-          echo "APP_PORT=${{ env.APP_PORT }}" >> .env
-          echo "NODE_ENV=${{ env.NODE_ENV }}" >> .env
+
+      - name: Setup
+        uses: ./.github/actions/setup-node-dependencies
+
       - name: Set up Docker Build
         uses: docker/setup-buildx-action@v3
+
       - name: Extract metadata
         id: meta
         uses: docker/metadata-action@v5
         with:
           images: docker.io/${{ secrets.DOCKERHUB_USERNAME }}/${{ github.event.repository.name }}
           tags: |
+            # PR numbers
             type=ref,event=pr,prefix=pr-
+            # Git commit SHA with branch prefix (only for branches)
             type=sha,prefix=main-,enable=${{ github.ref == 'refs/heads/main' }}
             type=sha,prefix=develop-,enable=${{ github.ref == 'refs/heads/develop' }}
+            # Named tags for specific branches
             type=raw,value=dev,enable=${{ github.ref == 'refs/heads/develop' }}
             type=raw,value=main,enable=${{ github.ref == 'refs/heads/main' }}
+            # Latest tag for main branch
             type=raw,value=latest,enable=${{ github.ref == 'refs/heads/main' }}
+
       - name: Build Docker image
         uses: docker/build-push-action@v5
         with:
@@ -150,6 +186,7 @@ jobs:
           cache-from: type=gha
           cache-to: type=gha,mode=max
           outputs: type=docker,dest=/tmp/f1-api-image.tar
+
       - name: Upload Docker image artifact
         uses: actions/upload-artifact@v4
         with:
@@ -162,10 +199,13 @@ jobs:
     name: Docker Publish
     runs-on: ubuntu-latest
     needs: [docker-build]
+    # Only run when PR is successfully merged into main/develop or on version tags
     if: success() && github.event_name == 'push' && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/develop' || startsWith(github.ref, 'refs/tags/v'))
+
     steps:
       - name: Set up Docker Build
         uses: docker/setup-buildx-action@v3
+
       - name: Download Docker image artifact
         uses: actions/download-artifact@v4
         with:
@@ -175,27 +215,36 @@ jobs:
         run: |
           docker load --input /tmp/f1-api-image.tar
           docker image ls -a
+
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
         with:
           registry: docker.io
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
+
       - name: Extract metadata
         id: meta
         uses: docker/metadata-action@v5
         with:
           images: docker.io/${{ secrets.DOCKERHUB_USERNAME }}/${{ github.event.repository.name }}
           tags: |
+            # Semantic versioning tags
             type=semver,pattern={{version}}
             type=semver,pattern={{major}}.{{minor}}
             type=semver,pattern={{major}}
+            # Named tags for specific branches
             type=raw,value=dev,enable=${{ github.ref == 'refs/heads/develop' }}
             type=raw,value=main,enable=${{ github.ref == 'refs/heads/main' }}
+            # Latest tag for main branch
             type=raw,value=latest,enable=${{ github.ref == 'refs/heads/main' }}
+
       - name: Push Docker image
         run: |
+          # Get the image ID from the loaded image
           IMAGE_ID=$(docker images --format "table {{.Repository}}:{{.Tag}}\t{{.ID}}" | grep "${{ github.event.repository.name }}" | head -1 | awk '{print $2}')
+
+          # Tag and push each tag from metadata
           echo '${{ steps.meta.outputs.tags }}' | tr ',' '\n' | while read -r tag; do
             if [ ! -z "$tag" ]; then
               echo "Tagging and pushing: $tag"
@@ -218,15 +267,22 @@ jobs:
         docker-publish,
       ]
     if: always()
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+
       - name: Generate CI Summary
         uses: ./.github/actions/pipeline-summary
         with:
-          linting-status: ${{ needs.linting.result }}
-          test-status: ${{ needs.test.result }}
-          security-status: ${{ needs.security.result }}
-          docker-build-status: ${{ needs.docker-build.result }}
-          docker-publish-status: ${{ needs.docker-publish.result }}
-          github-token: ${{ secrets.GITHUB_TOKEN }}
+          install-dependencies-result: ${{ needs.install-dependencies.result }}
+          linting-result: ${{ needs.linting.result }}
+          test-result: ${{ needs.test.result }}
+          security-result: ${{ needs.security.result }}
+          docker-build-result: ${{ needs.docker-build.result }}
+          docker-publish-result: ${{ needs.docker-publish.result }}
+          github-event-name: ${{ github.event_name }}
+          github-event-number: ${{ github.event.number }}
+          github-base-ref: ${{ github.base_ref }}
+          github-ref-name: ${{ github.ref_name }}
+          default-branch: ${{ github.event.repository.default_branch }}
