--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,13 +31,15 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-      - name: Setup
+      - name: Setup and Install Dependencies
         uses: ./.github/actions/setup-node-dependencies
+      - name: Archive node_modules
+        run: tar -czf node_modules.tar.gz node_modules
       - name: Upload node_modules artifact
         uses: actions/upload-artifact@v4
         with:
-          name: node-modules-${{ github.run_id }}
-          path: node_modules
+          name: node-modules-artifact-${{ github.run_id }}
+          path: node_modules.tar.gz
           retention-days: 1
 
   # Stage 2: Linting
@@ -58,8 +60,10 @@ jobs:
       - name: Download node_modules artifact
         uses: actions/download-artifact@v4
         with:
-          name: node-modules-${{ github.run_id }}
-          path: node_modules
+          name: node-modules-artifact-${{ github.run_id }}
+
+      - name: Extract node_modules
+        run: tar -xzf node_modules.tar.gz
 
       - name: Run ESLint
         run: npm run lint
@@ -85,8 +89,10 @@ jobs:
       - name: Download node_modules artifact
         uses: actions/download-artifact@v4
         with:
-          name: node-modules-${{ github.run_id }}
-          path: node_modules
+          name: node-modules-artifact-${{ github.run_id }}
+
+      - name: Extract node_modules
+        run: tar -xzf node_modules.tar.gz
 
       - name: Run tests
         run: npm run test:cov
@@ -95,7 +101,7 @@ jobs:
   security:
     name: Security
     runs-on: ubuntu-latest
-    needs: [install-dependencies, linting, test]
+    needs: [linting, test]
     permissions:
       security-events: write
       actions: read
@@ -115,8 +121,10 @@ jobs:
       - name: Download node_modules artifact
         uses: actions/download-artifact@v4
         with:
-          name: node-modules-${{ github.run_id }}
-          path: node_modules
+          name: node-modules-artifact-${{ github.run_id }}
+
+      - name: Extract node_modules
+        run: tar -xzf node_modules.tar.gz
 
       - name: Initialize CodeQL
         uses: github/codeql-action/init@v3
@@ -145,7 +153,7 @@ jobs:
   docker-build:
     name: Build
     runs-on: ubuntu-latest
-    needs: [install-dependencies, linting, test, security]
+    needs: [linting, test, security]
 
     steps:
       - name: Checkout repository
@@ -153,6 +161,8 @@ jobs:
 
       - name: Setup
         uses: ./.github/actions/setup-node-dependencies
+        with:
+          create-env: true
 
       - name: Set up Docker Build
         uses: docker/setup-buildx-action@v3
@@ -257,32 +267,17 @@ jobs:
   pipeline-summary:
     name: Pipeline Summary
     runs-on: ubuntu-latest
-    needs:
-      [
-        install-dependencies,
-        linting,
-        test,
-        security,
-        docker-build,
-        docker-publish,
-      ]
+    needs: [linting, test, security, docker-build, docker-publish]
     if: always()
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-
-      - name: Generate CI Summary
+      - name: Run pipeline summary
         uses: ./.github/actions/pipeline-summary
         with:
-          install-dependencies-result: ${{ needs.install-dependencies.result }}
           linting-result: ${{ needs.linting.result }}
           test-result: ${{ needs.test.result }}
           security-result: ${{ needs.security.result }}
           docker-build-result: ${{ needs.docker-build.result }}
           docker-publish-result: ${{ needs.docker-publish.result }}
-          github-event-name: ${{ github.event_name }}
-          github-event-number: ${{ github.event.number }}
-          github-base-ref: ${{ github.base_ref }}
-          github-ref-name: ${{ github.ref_name }}
-          default-branch: ${{ github.event.repository.default_branch }}
